united we stand, divided we fall

--- a/_posts/2000-01-01-tarcie.md
+++ b/_posts/2000-01-01-tarcie.md
@@ -22,7 +22,7 @@ authors: [Kacper Wojakowski, Arkadiusz Michalak]
 3. Na podstawie tego liczymy $$sin$$ kąta wychylenia.
 4. Obliczamy składową poziomą siły ciężkości.
 5. Przyrównujemy ją do składowej pionowej, czyli nacisku i współczynnika tarcia.
-6. Z tego równania wyliczamy współczynnik tarcia statycznego.
+6. Z tego równania wyliczamy współczynnik tarcia statycznego. $$f = tg\alpha$$
 
 ### Tarcie kinetyczne
 
@@ -30,7 +30,7 @@ authors: [Kacper Wojakowski, Arkadiusz Michalak]
 2. Puszczamy pudełko i mierzymy czas zjazdu.
 3. Wyliczzamy przyspieszenie ze wzoru na ruch jednostajnie przyspieszony.
 4. Przyrównujemy do wypadkowej siły tarcia i składowej poziomej siły ciężkości.
-5. Z tego równania uzyskujemy współczynnik tarcia kinetycznego.
+5. Z tego równania uzyskujemy współczynnik tarcia kinetycznego. $$f = \frac{g \times sin\alpha - a}{g \times cos\alpha}$$
 
 ## Filmik
 
