once more into time loop devoid of sorrow

--- a/_posts/2000-01-01-tarcie.md
+++ b/_posts/2000-01-01-tarcie.md
@@ -30,7 +30,7 @@ authors: [Kacper Wojakowski, Arkadiusz Michalak]
 2. Puszczamy pudełko i mierzymy czas zjazdu.
 3. Wyliczzamy przyspieszenie ze wzoru na ruch jednostajnie przyspieszony.
 4. Przyrównujemy do wypadkowej siły tarcia i składowej poziomej siły ciężkości.
-5. Z tego równania uzyskujemy współczynnik tarcia kinetycznego. $$f = \frac{g \times sin\alpha - a}{g \times cos\alpha}$$
+5. Z tego równania uzyskujemy współczynnik tarcia kinetycznego. $$f = \frac{g sin\alpha - a}{g cos\alpha}$$
 
 ## Filmik
 
