to be something trigger the override

--- a/_posts/2000-01-01-tarcie.md
+++ b/_posts/2000-01-01-tarcie.md
@@ -4,6 +4,10 @@ layout: post
 
 title: "Doświadczalne wyznaczanie współczynnika tarcia"
 
+nickname: Tarcie
+
+thumbnail: "http://img.youtube.com/vi/FobRvFeEvK4/0.jpg"
+
 authors: [Kacper Wojakowski, Arkadiusz Michalak]
 ---
 
