we've come too far to give up who we are

--- a/_posts/2000-01-01-ukosny.md
+++ b/_posts/2000-01-01-ukosny.md
@@ -124,6 +124,6 @@ $$ \frac{d}{dx}(0.26795 - 1.1203x) = -1.1203 $$ - druga pochodna w punkcie kryty
 
 Współrzędną $$ y $$ (wysokość maksymalną) policzymy sobie obliczając wartość funkcji dla $$ x = 0.23918 $$
 
-$$ y = 0.13 + 0.26794919243112270647255365849413 * 0.23918 - \frac{4.4 * x^2}{2.9015^2 * 0.93301270189221932338186158537647} = 0.16204 $$
+$$ y = 0.13 + 0.26794919243112270647255365849413 * 0.23918 - \frac{4.4 * 0.23918^2}{2.9015^2 * 0.93301270189221932338186158537647} = 0.16204 $$
 
 Na końcu liczymy wartość funkcji dla $$ x = 0.23918 $$ i mamy wysokość maksymalną równą $$ 0.162 m $$
