it's our last chance to forgive ourselves

--- a/_posts/2000-01-01-pascal.md
+++ b/_posts/2000-01-01-pascal.md
@@ -38,7 +38,7 @@ Postanowiliśmy zweryfikować mniej więcej to prawo, jednocześnie sprawdzając
 
 ## Filmik
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/35hBNa8bR7I?rel=0" frameborder="0" allowfullscreen></iframe>
+<div class="video-container"><iframe width="420" height="315" src="https://www.youtube.com/embed/35hBNa8bR7I?rel=0" frameborder="0" allowfullscreen></iframe></div>
 
 ## Wnioski
 
