we are maverick

--- a/_posts/2000-01-01-poziome.md
+++ b/_posts/2000-01-01-poziome.md
@@ -11,7 +11,7 @@ authors: [Piotr Grabowski, "Józef Zápařka"]
 
 Rzut poziomy jest to ruch ciała w polu grawitacyjnym Ziemi, wyrzuconego równolegle do jej powierzchni z określoną prędkością $$v_0$$. Ciało opada z przyśpieszeniem grawitacyjnym $$g$$. Opory powietrza pomijamy.
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/hb6hYmV.jpg" src="//i.imgur.com/hb6hYmVm.jpg"></div></div>
+<div class="row"><div class="col s6"><img class="materialboxed responsive-img" src="https://commons.wikimedia.org/wiki/File:Rzutp.gif"></div></div>
 
 Prędkość $$v_0$$ nie zmienia się w czasie trwania ruchu, natomiast prędkość $$v_y$$, która na początku jest równa $$0$$, rośnie z przyśpieszeniem $$g$$. Aby obliczyć prędkość ciała w danej sekundzie ruchu, należy dokonać złożenia dwóch wektorów - $$v_x$$ i $$v_y$$.
 
