stand still, pause clocks, we can make the world stop

--- a/_posts/2000-01-01-poziome.md
+++ b/_posts/2000-01-01-poziome.md
@@ -3,6 +3,8 @@ layout: post
 
 title: "Rzuty poziome oraz rozkład Gaussa"
 
+thumbnail: "//i.imgur.com/Nck9QGHb.jpg"
+
 nickname: "Rzuty poziome"
 
 authors: [Piotr Grabowski, "Józef Zápařka"]
