We adapt, mutilate, replicate and survive

--- a/_posts/2000-01-01-gestosc.md
+++ b/_posts/2000-01-01-gestosc.md
@@ -1,11 +1,13 @@
 ---
 layout: post
 
-title: "﻿Wyznaczanie gęstości za pomocą prawa wybitnego greckiego filozofa przyrody i matematyka, urodzonego w Syrakuzach, syna Fidiasza"
+title: "Wyznaczanie gęstości za pomocą prawa wybitnego greckiego filozofa przyrody i matematyka, urodzonego w Syrakuzach, syna Fidiasza"
 
 authors: ["Iga Kozłowska", "Patrycja Adamczyk"]
 
-nicename: "Gęstość Archimedesa"
+thumbnail: "https://aww.moe/e5g2v6.jpg"
+
+nickname: "Gęstość Archimedesa"
 ---
 
 ## Wstęp
