and the shadows of the day

--- a/_posts/2000-01-01-poziome.md
+++ b/_posts/2000-01-01-poziome.md
@@ -3,7 +3,7 @@ layout: post
 
 title: "Rzuty poziome oraz rozkład Gaussa"
 
-thumbnail: "//i.imgur.com/Nck9QGHb.jpg"
+thumbnail: "//i.imgur.com/Nck9QGHm.jpg"
 
 nickname: "Rzuty poziome"
 
