--- a/_posts/2000-01-01-pracamoc.md
+++ b/_posts/2000-01-01-pracamoc.md
@@ -12,4 +12,4 @@ authors: ['Piotr "Doman" Domański', "Radosław Jawor"]
 
 <br>
 
-<div class="video-container"><iframe width="420" height="315" src="https://www.youtube.com/embed/NCBKKBJNDI8?rel=0" frameborder="0" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="420" height="315" src="https://www.youtube.com/embed/NCBKKBJNDI8?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe></div>
