--- a/_posts/2000-01-01-poziome.md
+++ b/_posts/2000-01-01-poziome.md
@@ -5,7 +5,7 @@ title: "Rzuty poziome oraz rozkład Gaussa"
 
 thumbnail: "//i.imgur.com/Nck9QGHm.jpg"
 
-nickname: "Rzuty poziome"
+nickname: "Rzuty poziome oraz rozkład Gaussa"
 
 authors: [Piotr Grabowski, "Józef Zápařka"]
 ---
