--- a/_posts/2000-01-01-tarcie.md
+++ b/_posts/2000-01-01-tarcie.md
@@ -2,7 +2,7 @@
 
 layout: post
 
-title: "Doświadczalne wyznaczanie współczynnika tarcia"
+title: "Wyznaczanie współczynnika tarcia"
 
 nickname: Tarcie
 
