--- a/_posts/2000-01-01-toczenie.md
+++ b/_posts/2000-01-01-toczenie.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 
-title: Toczenie jako złożenie ruchu postępowego i obrotowego.
+title: Toczenie jako złożenie ruchu postępowego i obrotowego
 
-nickname: Toczenie
+nickname: Toczenie jako złożenie ruchu postępowego i obrotowego
 
 thumbnail: "https://img.youtube.com/vi/rDHSDiLheD0/0.jpg"
 
