--- a/_posts/2000-01-01-ukosny.md
+++ b/_posts/2000-01-01-ukosny.md
@@ -2,9 +2,9 @@
 
 layout: post
 
-title: "Badanie rzutu ukośnego z wysokością początkową"
+title: "Badanie rzutu ukośnego"
 
-nickname: Rzut ukośny
+nickname: "Badanie rzutu ukośnego"
 
 thumbnail: "https://i.vimeocdn.com/video/545836247_1280x960.jpg"
 
