one christmas at a time, baby

--- a/_posts/2000-01-01-toczenie.md
+++ b/_posts/2000-01-01-toczenie.md
@@ -35,18 +35,23 @@ Toczenie jest złożeniem tych dwóch ruchów:
 ### toczenie bez poślizgu
 
 $$v_p = \omega * r$$
+
 $$v_p$$ - prędkość ruchu postępowego ciała
+
 $$\omega$$ - prędkość kątowa ciała
+
 $$r$$ - promień
 
 <div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/pqvZfLk.png" src="//i.imgur.com/pqvZfLkm.png"></div></div>
 
-
 ### toczenie z poślizgiem
 
 $$v_p \neq \omega * r$$
+
 $$v_p$$ - prędkość ruchu postępowego ciała
+
 $$\omega$$ - prędkość kątowa ciała
+
 $$r$$ - promień
 
 <div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/QrDKjOU.png" src="//i.imgur.com/QrDKjOUm.png"></div></div>
@@ -55,32 +60,23 @@ $$r$$ - promień
 
 <div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/AjlaDDS.png" src="//i.imgur.com/AjlaDDSm.png"></div></div>
 
-$$\begin{cases}
-ma = mg\sin(\alpha) - T\\
-I? = (mg\sin(\alpha))*\sin(0) + Tr\sin(90)
-\end{cases}$$
+$$\begin{cases} ma = mg\sin(\alpha) - T\\ I\varepsilon = (mg\sin(\alpha))*\sin(0) + Tr\sin(90) \end{cases}$$
 
-$$\begin{cases}
-ma = mg\sin(\alpha) - T\\
-I? = Tr
-\end{cases}$$
+$$\begin{cases} ma = mg\sin(\alpha) - T\\ I\varepsilon = Tr \end{cases}$$
 
-$$\begin{cases}
-ma = mg\sin(\alpha) - T\\
-T = \frac{I\varepsilon}{r}
-\end{cases}$$
+$$\begin{cases} ma = mg\sin(\alpha) - T\\ T = \frac{I\varepsilon}{r} \end{cases}$$
 
 $$ma = mg\sin(\alpha) - \frac{I\varepsilon}{r}$$
 
 $$a = \varepsilon r$$
 
-$$m* \varepsilon *r + \frac{I\varepsilon}{r} = mg\sin(\alpha)$$
+$$m\varepsilonr + \frac{I\varepsilon}{r} = mg\sin(\alpha)$$
 
 $$\varepsilon(mr + \frac{I}{r}) = mg\sin(\alpha)$$
 
 $$\varepsilon = \frac{mg\sin(\alpha)}{mr + \frac{I}{r}}$$
 
-$$a = \varepsilon*r = \frac{mg\sin(\alpha)}{m + \frac{I}{r^2}}$$
+$$a = \varepsilonr = \frac{mg\sin(\alpha)}{m + \frac{I}{r^2}}$$
 
 
 ## Filmik
