christmas is interesting like a knife in your heart

--- a/_posts/2000-01-01-toczenie.md
+++ b/_posts/2000-01-01-toczenie.md
@@ -11,19 +11,19 @@ authors: [Szymon Stasiak, "Paweł Świątkowski"]
 ---
 Ruch postępowy jest to ruch w którym każdy punkt danego ciała porusza się z taką samą prędkością liniową $$v$$.
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/TvIbRDW.png" src="//i.imgur.com/TvIbRDWm.png"></div></div>
+<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/AjlaDDS.png" src="//i.imgur.com/AjlaDDSm.png"></div></div>
 
 Ruch obrotowy jest to ruch, w którym każdy punkt danego ciała porusza się z taką samą prędkością kątową $$\omega$$.
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/Qeg7mmY.png" src="//i.imgur.com/Qeg7mmYm.png"></div></div>
+<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/QrDKjOU.png" src="//i.imgur.com/QrDKjOUm.png"></div></div>
 
 Toczenie jest złożeniem tych dwóch ruchów:
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/bS8GoXD.png" src="//i.imgur.com/bS8GoXDm.png"></div><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/pqvZfLk.png" src="//i.imgur.com/pqvZfLkm.png"></div></div>
+<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/HynPr97.png" src="//i.imgur.com/HynPr97m.png"></div><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/pqvZfLk.png" src="//i.imgur.com/pqvZfLkm.png"></div></div>
 
 ## Tor punktów w trakcie toczenia
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/HynPr97.png" src="//i.imgur.com/HynPr97m.png"></div></div>
+<div class="row"><div class="col s12"><img class="materialboxed responsive-img" data-src="//i.imgur.com/bS8GoXD.png" src="//i.imgur.com/bS8GoXDm.png"></div></div>
 
 - $$A$$ - punkt na obwodzie toczącego się ciała
 - $$B$$ - środek masy toczącego się ciała
@@ -54,11 +54,11 @@ $$\omega$$ - prędkość kątowa ciała
 
 $$r$$ - promień
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/QrDKjOU.png" src="//i.imgur.com/QrDKjOUm.png"></div></div>
+<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/Qeg7mmY.png" src="//i.imgur.com/Qeg7mmYm.png"></div></div>
 
 ## Toczenie po równi (bez poślizgu)
 
-<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/AjlaDDS.png" src="//i.imgur.com/AjlaDDSm.png"></div></div>
+<div class="row"><div class="col s6"><img class="materialboxed responsive-img" data-src="//i.imgur.com/TvIbRDW.png" src="//i.imgur.com/TvIbRDWm.png"></div></div>
 
 $$\begin{cases} ma = mg\sin(\alpha) - T\\ I \varepsilon = (mg\sin(\alpha))*\sin(0) + Tr\sin(90) \end{cases}$$
 
