no more time machine

--- a/_posts/3000-01-01-pracamoc.md
+++ b/_posts/3000-01-01-pracamoc.md
@@ -5,7 +5,7 @@ title: Praca i moc
 
 thumbnail: "http://img.youtube.com/vi/NCBKKBJNDI8/0.jpg"
 
-nickname: Beka
+nickname: Praca i moc
 
 authors: ['Piotr "Doman" Domański', "Radosław Jawor"]
 ---
